5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1679_1105.log
== TEST (2019-04-27 23:18:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("Entrada:")
print(A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Brasao",b)
-- OUTPUT:
lula
Brasao Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:18:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("Entrada:")
print(A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Brasao",b)
-- EXECUTION TIME:
0.131892
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
lula
Brasao Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
dragao
Brasao Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:19:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:"A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Brasao",b)
-- ERROR:
File "XXXX", line 4
    print("Entrada:"A)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:19:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Brasao",b)
-- OUTPUT:
Entrada: lula
Brasao Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:19:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Brasao",b)
-- EXECUTION TIME:
0.122952
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Brasao Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Brasao Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:19:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Brasao",b)
-- OUTPUT:
Entrada: lula
Brasao Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:20:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Brasao",b)
-- OUTPUT:
Entrada: lula
Brasao Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:20:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa",b)
-- OUTPUT:
Entrada: lula
Casa Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:20:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa",b)
-- OUTPUT:
Entrada: lula
Casa Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:20:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa",b)
-- EXECUTION TIME:
0.255081
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:20:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa:",b)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:20:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa:",b)
-- EXECUTION TIME:
0.15823
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:21:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b=Lannister
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa:",b)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:21:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa:",b)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:21:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa:",b)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:21:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa:",b)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:21:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa:",b)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:21:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa:",b)
-- EXECUTION TIME:
0.129945
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:23:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Brasao",b)
-- OUTPUT:
Entrada: lula
Brasao Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:23:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Brasao",b)
-- EXECUTION TIME:
0.134602
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Brasao Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Brasao Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:23:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Brasao:",b)
-- EXECUTION TIME:
0.183887
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Brasao: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao: invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Brasao: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:23:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
print("Casa:",b)
-- EXECUTION TIME:
0.165929
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:25:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
	print("brasao",b)
print("Casa:",b)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:25:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
else:
	b="invalido"
	print("brasao",b)
print("Casa:",b)
-- EXECUTION TIME:
0.143345
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
brasao invalido
Casa: invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:25:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
print("Casa:",b)
	else:
	b="Brasao invalido"
	
print(b)
-- ERROR:
File "XXXX", line 25
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:26:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
print("Casa:",b)
else:
	b="Brasao invalido"
	
print(b)
-- ERROR:
File "XXXX", line 25
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:26:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
	print("Casa:",b)
else:
	b="Brasao invalido"
	
print(b)
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:26:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
elif(A=="leao"):
	b="Lannister"
elif(A=="veado"):
	b="Baratheon"
elif(A=="dragao"):
	b="Targaryen"
elif(A=="rosa"):
	b="Tyrell"
elif(A=="sol"):
	b="Martell"
elif(A=="lula"):
	b="Greyjoy"
elif(A=="esfolado"):
	b="Bolton"
elif(A=="turta"):
	b="Tully"
	print("Casa:",b)
else:
	b="Brasao invalido"
	
print(b)
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:27:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
	print("Casa:",b)
elif(A=="leao"):
	b="Lannister"
	print("Casa:",b)
elif(A=="veado"):
	b="Baratheon"
	print("Casa:",b)
elif(A=="dragao"):
	b="Targaryen"
	print("Casa:",b)
elif(A=="rosa"):
	b="Tyrell"
	print("Casa:",b)
elif(A=="sol"):
	b="Martell"
	print("Casa:",b)
elif(A=="lula"):
	b="Greyjoy"
	print("Casa:",b)
elif(A=="esfolado"):
	b="Bolton"
	print("Casa:",b)
elif(A=="turta"):
	b="Tully"
	print("Casa:",b)
else:
	b="Brasao invalido"
	print(b)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:27:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
	print("Casa:",b)
elif(A=="leao"):
	b="Lannister"
	print("Casa:",b)
elif(A=="veado"):
	b="Baratheon"
	print("Casa:",b)
elif(A=="dragao"):
	b="Targaryen"
	print("Casa:",b)
elif(A=="rosa"):
	b="Tyrell"
	print("Casa:",b)
elif(A=="sol"):
	b="Martell"
	print("Casa:",b)
elif(A=="lula"):
	b="Greyjoy"
	print("Casa:",b)
elif(A=="esfolado"):
	b="Bolton"
	print("Casa:",b)
elif(A=="turta"):
	b="Tully"
	print("Casa:",b)
else:
	b="Brasao invalido"
	print(b)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 23:27:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
	print("Casa:",b)
elif(A=="leao"):
	b="Lannister"
	print("Casa:",b)
elif(A=="veado"):
	b="Baratheon"
	print("Casa:",b)
elif(A=="dragao"):
	b="Targaryen"
	print("Casa:",b)
elif(A=="rosa"):
	b="Tyrell"
	print("Casa:",b)
elif(A=="sol"):
	b="Martell"
	print("Casa:",b)
elif(A=="lula"):
	b="Greyjoy"
	print("Casa:",b)
elif(A=="esfolado"):
	b="Bolton"
	print("Casa:",b)
elif(A=="turta"):
	b="Tully"
	print("Casa:",b)
else:
	b="Brasao invalido"
	print(b)

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:27:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
A=input("")
print("Entrada:",A)

if(A=="lobo"):
	b="Stark"
	print("Casa:",b)
elif(A=="leao"):
	b="Lannister"
	print("Casa:",b)
elif(A=="veado"):
	b="Baratheon"
	print("Casa:",b)
elif(A=="dragao"):
	b="Targaryen"
	print("Casa:",b)
elif(A=="rosa"):
	b="Tyrell"
	print("Casa:",b)
elif(A=="sol"):
	b="Martell"
	print("Casa:",b)
elif(A=="lula"):
	b="Greyjoy"
	print("Casa:",b)
elif(A=="esfolado"):
	b="Bolton"
	print("Casa:",b)
elif(A=="turta"):
	b="Tully"
	print("Casa:",b)
else:
	b="Brasao invalido"
	print(b)

-- EXECUTION TIME:
0.192652
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
